# langchain-playground

./: .env.example  README.md  gpt.ipynb  pyproject.toml  simple_llm_application.ipynb
src/: build_a_rag_app.ipynb  build_an_agent.ipynb  simple_llm_application.ipynb  vectore_stores_and_retrievers.ipynb
