[tool.poetry]
name = "langchain-playground"
version = "0.1.0"
description = ""
authors = ["Flynn <wphestiraid@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
