[tool.poetry]
name = "langchain-playground"
version = "0.1.0"
description = ""
authors = ["Flynn <wphestiraid@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
langchain = "^0.3.3"
langchain-community = "^0.3.2"
langchain-openai = "^0.2.2"
python-dotenv = "^1.0.1"
langchain-chroma = "^0.1.4"
langchain-anthropic = "^0.2.3"
langgraph = "^0.2.35"
tavily-python = "^0.5.0"
langgraph-checkpoint-sqlite = "^2.0.0"
duckduckgo-search = "^6.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.6.9"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
